<resources>
    <string name="app_name">Portfolio</string>


    <string name="main_header">My Nanodegree Apps!</string>
    <string name="main_popular_movies">Popular Movies</string>
    <string name="main_stock_hawk">Stock Hawk</string>
    <string name="main_build_it_bigger">Build it bigger</string>
    <string name="main_make_your_app_material">Make your app Material</string>
    <string name="main_go_ubiquitous">Go Ubiquitous</string>
    <string name="main_capstone">Capstone</string>
    <string name="main_toast_unavailable">This button will launch %s app!</string>
</resources>
